--- a/_sass/layout/_buttons.scss
+++ b/_sass/layout/_buttons.scss
@@ -19,11 +19,13 @@
   text-decoration: none;
   background-color: var(--global-base-color);
   border: 0 !important;
+  transition: $global-transition;
   border-radius: $border-radius;
   cursor: pointer;
 
   &:hover {
     background-color: mix(white, #000, 20%);
+    filter: brightness(1.1);
   }
 
   .icon {
